# eai

./: .gitignore  CLAUDE.md  README.md  aggregate.py  build_crosswalk.py  build_iwa_onet_mapping.py  build_openai_iwa_oews.py  clean_aei.py  convert_oews.py  convert_onet.py  download_aei.py  download_eloundou.py  merge.py  occupational_characteristics.py  panel.py  pyproject.toml
.github/workflows/: lint.yml
analysis/: cross_release_correlation.py  net_automation_wages.py  openai_iwa_wages.py
analysis/tables/: correlations.csv  extensive_margin.csv  intensive_correlations.csv  overall_correlations.csv
anthropic/: clean.py  download.py  occupation_automation_augmentation_data.csv  scatter.py
distribution/: README.md
docs/: eai.md  eai.typ
eai/: aei.py  codebook.py  plot.py  utils.py
eloundou_et_al/: download.py
input/: .gitignore
input/release_2025_09_15/: metadata.json
input/release_2026_01_15/: metadata.json
input/release_2026_03_24/: metadata.json
occupations/: main.py  occupations_aei.csv  occupations_aei_task_occ.csv  occupations_eloundou_et_al.csv
oews/: convert.py
onet/: convert.py  crosswalk.py
output/: .gitignore  codebook.md  occupations_aei.csv  occupations_aei_auto_aug_2025_03_27.csv  occupations_aei_oews_2024.csv  occupations_eloundou_et_al.csv
output/cross_release/: codebook.md
output/net_automation_wages/: codebook.md  (+2 more)
pipeline/: build_crosswalk.py  build_iwa_onet_mapping.py  build_openai_iwa_oews.py  clean_aei.py  convert_oews.py  convert_onet.py  occupational_characteristics.py  panel.py  sync_distribution.py
(+21 files in other folders)
