[project]
name = "eai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
]

[tool.ruff]
# Standard linting rules
lint.select = ["E", "F", "I", "W"]
line-length = 88
target-version = "py312"

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint.isort]
known-first-party = ["eai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
